--- a/src/content/docs/homeworks/final project MVP.mdx
+++ b/src/content/docs/homeworks/final project MVP.mdx
@@ -1,5 +1,5 @@
 ---
-tentative: true
+tentative: false
 title: Final Project MVP
 description: Make your app do the most basic version of what you want it to do
 sidebar:
@@ -25,7 +25,7 @@ import { marked } from "marked"
 
 **Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-TLDR: submit [this form](https://forms.gle/zHZahbiG5Tk8Begg7) before the deadline.
+TLDR: submit [this form](https://forms.gle/AjaFAvLps8wyiNmv9) before the deadline.
 
 For this deliverable, you're responsible for three core things:
 
