--- a/src/content/docs/homeworks/homework 4.mdx
+++ b/src/content/docs/homeworks/homework 4.mdx
@@ -1,19 +1,16 @@
 ---
-tentative: true
+tentative: false
 title: 'Homework 4: SECURITY'
 description: Hacking a juice shop 🧃
 sidebar:
   order: 34
-notes: >-
-  Watch [the kickoff video](https://youtu.be/5xExn6wqHnA) for help getting
-  started.
 relative_release:
-  week: 8
+  week: 10
   day: 1
   time: '08:00:00'
 relative_due:
-  week: 9
-  day: Friday
+  week: 12
+  day: Wednesday
 ---
 
 import { Content as Deadlines } from "../../../components/Deadlines.md";
@@ -27,7 +24,7 @@ import { marked } from "marked";
 
 # {frontmatter.description}
 
-We will be hacking the UIC [Juiceshop](https://juice-shop.cs.uic.edu:30443/balancer/). This is an intentionally vulnerable full stack web
+We will be hacking the UIC [Juiceshop](https://cs484-f25.kaytwo.org). This is an intentionally vulnerable full stack web
 application built with Angular, Express, and Sqlite.
 
 When starting to use the juice shop, it will ask you for your team name. This is
@@ -41,7 +38,7 @@ application "game" works. The main task will be to find and exploit several
 different flavors of vulnerability.
 
 The juice shop keeps a [high score
-board](https://juice-shop.cs.uic.edu:30443/balancer/score-board/). You receive nothing
+board](https://cs484-f25.kaytwo.org/balancer/score-board/). You receive nothing
 but bragging rights for getting a high score.
 
 ## Find it fix it
