--- a/src/content/docs/homeworks/homework 3.mdx
+++ b/src/content/docs/homeworks/homework 3.mdx
@@ -3,6 +3,9 @@ title: Homework 3 - Authentication/Serverless
 description: Authentication/Serverless
 sidebar:
   order: 32
+notes: >-
+  Watch [the kickoff video](https://www.youtube.com/watch?v=KKmMHEqTpxQ) for help getting
+  started.
 relative_release:
   week: 8
   day: Friday
@@ -33,6 +36,10 @@ Create a new **private** repository under your own GitHub account
 from [this template](https://github.com/swad-cs-uic/homework3-f25). Sharing your
 code for the assignment, intentionally or unintentionally, is a violation of the
 academic integrity policy in this course.
+
+<Aside>
+  <Fragment set:html={marked(frontmatter.notes)} />
+</Aside>
 
 ### Installing required packages and setting up firebase.
 
