--- a/src/content/docs/homeworks/final final project.mdx
+++ b/src/content/docs/homeworks/final final project.mdx
@@ -1,5 +1,4 @@
 ---
-tentative: true
 title: Final Final Project!
 description: Make your app do the thing
 sidebar:
@@ -8,9 +7,9 @@ relative_release:
   week: 12
   day: 2
 relative_due:
-  week: 14
+  week: 15
   day: Friday
-  time: '08:00:00'
+  time: '23:59:00'
 ---
 
 import { localizeTime, formatTime, calculateAbsoluteDate } from "../../../utils/dateUtils";
@@ -26,7 +25,7 @@ import { marked } from "marked"
 
 **Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-TLDR: submit [this form](https://forms.gle/n9cdZMK8C24wprqC6) before the deadline.
+TLDR: submit [this form](https://forms.gle/JeTCvNE2NGXLjaYf7) before the deadline.
 
 For this deliverable, you're responsible for four core things:
 
@@ -38,5 +37,3 @@ For this deliverable, you're responsible for four core things:
 # Your deliverable is a deployed website
 
 Rather than testing code, we will be testing a deployed website for this deliverable. This means that while you can continue to work on your app after the deadline, **we can perform our testing at any time, and if your app is in a broken state in production when we test it, you will get the points that that version of the site earns**. In other words, if you wish to continue working on your app after the deadline, you ABSOLUTELY MUST work on new features on a branch besides the main deployed branch (or you can submit a "mvp" branch deploy), and if you do want to push "improvements" to the version that I grade, make darn sure that you've tested it thoroughly before doing so.
-
-
