--- a/src/content/docs/homeworks/homework 4.mdx
+++ b/src/content/docs/homeworks/homework 4.mdx
@@ -11,6 +11,7 @@ relative_release:
 relative_due:
   week: 12
   day: Wednesday
+  time: '23:59:00'
 ---
 
 import { Content as Deadlines } from "../../../components/Deadlines.md";
