final final project

--- a/src/content/docs/homeworks/final final project.mdx
+++ b/src/content/docs/homeworks/final final project.mdx
@@ -25,7 +25,8 @@ import { marked } from "marked"
 
 **Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-TLDR: submit [this form](https://forms.gle/JeTCvNE2NGXLjaYf7) before the deadline.
+TLDR: **One** person in your group must submit [the final deliverable description form](https://forms.gle/JeTCvNE2NGXLjaYf7) before the deadline. **Everyone** in your group must submit [the contribution form](https://forms.gle/WEg8yEkzEKB8zqk39) before the deadline.
+
 
 For this deliverable, you're responsible for four core things:
 
