youtube link for kickoff video

--- a/src/content/docs/homeworks/homework 5.mdx
+++ b/src/content/docs/homeworks/homework 5.mdx
@@ -4,7 +4,7 @@ title: "Homework 5: Optimization"
 description: Optimization techniques in React
 extraCredit: "2024-12-04T14:00:00"
 notes: >-
-  Watch [the kickoff video](https://youtu.be/mjxBT8jxRLM) for help getting
+  Watch [the kickoff video](https://youtu.be/WwgDimt7o5c) for help getting
   started.
 relative_release:
   week: 13
